[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/DialogManager.gd" type="Script" id=1]
[ext_resource path="res://UI/DialogNode.gd" type="Script" id=2]

[node name="Dialog" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="DialogNode" type="Node" parent="."]
script = ExtResource( 2 )

[node name="DialogUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="DialogUI"]
anchor_top = 0.45
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.396078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="DialogUI"]
anchor_top = 0.65
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -32.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameBox" type="Label" parent="DialogUI/VBoxContainer"]
margin_right = 310.0
margin_bottom = 14.0
text = "_Name_"

[node name="TextBox" type="Label" parent="DialogUI/VBoxContainer"]
margin_top = 18.0
margin_right = 310.0
margin_bottom = 86.0
size_flags_vertical = 7
text = "<Text>"

[node name="Choices" type="HBoxContainer" parent="DialogUI/VBoxContainer"]
margin_top = 90.0
margin_right = 310.0
margin_bottom = 90.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="DialogUI/VBoxContainer/Choices"]
visible = false
margin_left = 121.0
margin_right = 189.0
margin_bottom = 20.0
text = "TTTTTTTT"
